--- a/AniPortrait_jupyter.ipynb
+++ b/AniPortrait_jupyter.ipynb
@@ -61,8 +61,17 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# %cd /content/AniPortrait\n",
+        "# !python -m scripts.pose2vid --config ./configs/prompts/animation.yaml -W 512 -H 512 -L 64\n",
+        "\n",
         "%cd /content/AniPortrait\n",
-        "!python -m scripts.pose2vid --config ./configs/prompts/animation.yaml -W 512 -H 512 -L 64"
+        "!python -m scripts.vid2vid --config ./configs/prompts/animation_facereenac.yaml -W 512 -H 512 -L 256\n",
+        "\n",
+        "# %cd /content/AniPortrait\n",
+        "# !python -m scripts.audio2vid --config ./configs/prompts/animation_audio.yaml -W 512 -H 512 -L 64\n",
+        "\n",
+        "# %cd /content/AniPortrait\n",
+        "# !python -m scripts.generate_ref_pose --ref_video ./configs/inference/head_pose_temp/pose_ref_video.mp4 --save_path ./configs/inference/head_pose_temp/pose.npy"
       ]
     }
   ],
