--- a/AniPortrait_audio2vid_jupyter.ipynb
+++ b/AniPortrait_audio2vid_jupyter.ipynb
@@ -6,7 +6,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/camenduru/AniPortrait-jupyter/blob/main/AniPortrait_jupyter.ipynb)"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/camenduru/AniPortrait-jupyter/blob/main/AniPortrait_audio2vid_jupyter.ipynb)"
       ]
     },
     {
@@ -61,17 +61,18 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# %cd /content/AniPortrait\n",
-        "# !python -m scripts.pose2vid --config ./configs/prompts/animation.yaml -W 512 -H 512 -L 64\n",
-        "\n",
         "%cd /content/AniPortrait\n",
-        "!python -m scripts.vid2vid --config ./configs/prompts/animation_facereenac.yaml -W 512 -H 512 -L 256\n",
-        "\n",
-        "# %cd /content/AniPortrait\n",
-        "# !python -m scripts.audio2vid --config ./configs/prompts/animation_audio.yaml -W 512 -H 512 -L 64\n",
-        "\n",
-        "# %cd /content/AniPortrait\n",
-        "# !python -m scripts.generate_ref_pose --ref_video ./configs/inference/head_pose_temp/pose_ref_video.mp4 --save_path ./configs/inference/head_pose_temp/pose.npy"
+        "!python -m scripts.generate_ref_pose --ref_video ./configs/inference/head_pose_temp/pose_ref_video.mp4 --save_path ./configs/inference/head_pose_temp/pose.npy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%cd /content/AniPortrait\n",
+        "!python -m scripts.audio2vid --config ./configs/prompts/animation_audio.yaml -W 512 -H 512 -L 256"
       ]
     }
   ],
