--- a/AniPortrait_vid2vid_plain_jupyter.ipynb
+++ b/AniPortrait_vid2vid_plain_jupyter.ipynb
@@ -288,8 +288,43 @@
         "output_file = \"/content/output.mp4\"\n",
         "audio_stream = ffmpeg.input(source_video_path).audio.filter('atrim', duration=duration)\n",
         "video_stream = ffmpeg.input(save_path)\n",
-        "ffmpeg.output(video_stream, audio_stream, output_file).overwrite_output().run()"
+        "ffmpeg.output(video_stream, audio_stream, output_file).overwrite_output().run()\n",
+        "\n",
+        "def cut_video_into_three_equal_parts(input_file, output_file_prefix):\n",
+        "    (\n",
+        "        ffmpeg\n",
+        "        .input(input_file)\n",
+        "        .filter('crop', 'iw/3', 'ih', x='0', y='0')\n",
+        "        .output(f'{output_file_prefix}_part1.mp4')\n",
+        "        .run(overwrite_output=True)\n",
+        "    )\n",
+        "    (\n",
+        "        ffmpeg\n",
+        "        .input(input_file)\n",
+        "        .filter('crop', 'iw/3', 'ih', x='(iw/3)', y='0')\n",
+        "        .output(f'{output_file_prefix}_part2.mp4')\n",
+        "        .run(overwrite_output=True)\n",
+        "    )\n",
+        "    (\n",
+        "        ffmpeg\n",
+        "        .input(input_file)\n",
+        "        .filter('crop', 'iw/3', 'ih', x='(iw/3)*2', y='0')\n",
+        "        .output(f'{output_file_prefix}_part3.mp4')\n",
+        "        .run(overwrite_output=True)\n",
+        "    )\n",
+        "\n",
+        "cut_video_into_three_equal_parts(output_file, '/content/output')\n",
+        "\n",
+        "from ipywidgets import Video\n",
+        "Video.from_file(\"/content/output_part2.mp4\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
