--- a/AniPortrait_vid2vid_flat_jupyter.ipynb
+++ b/AniPortrait_vid2vid_flat_jupyter.ipynb
@@ -283,37 +283,46 @@
         "    fps=src_fps if args.fps is None else args.fps,\n",
         ")\n",
         "\n",
-        "probe = ffmpeg.probe(save_path)\n",
-        "duration = float(probe['format']['duration'])\n",
+        "audio_output = '/content/audio_from_video.aac'\n",
         "output_file = \"/content/output.mp4\"\n",
-        "audio_stream = ffmpeg.input(source_video_path).audio.filter('atrim', duration=duration)\n",
+        "ffmpeg.input(source_video_path).output(audio_output, acodec='copy').run(overwrite_output=True)\n",
         "video_stream = ffmpeg.input(save_path)\n",
-        "ffmpeg.output(video_stream, audio_stream, output_file).overwrite_output().run()\n",
+        "audio_stream = ffmpeg.input(audio_output)\n",
+        "ffmpeg.output(video_stream.video, audio_stream.audio, output_file, vcodec='copy', acodec='aac').run(overwrite_output=True)\n",
         "\n",
-        "def cut_video_into_three_equal_parts(input_file, output_file_prefix):\n",
+        "def cut_video_into_three_equal_parts(input_file):\n",
         "    (\n",
         "        ffmpeg\n",
         "        .input(input_file)\n",
         "        .filter('crop', 'iw/3', 'ih', x='0', y='0')\n",
-        "        .output(f'{output_file_prefix}_part1.mp4')\n",
+        "        .output('/content/output_part1.mp4')\n",
         "        .run(overwrite_output=True)\n",
         "    )\n",
         "    (\n",
         "        ffmpeg\n",
         "        .input(input_file)\n",
-        "        .filter('crop', 'iw/3', 'ih', x='(iw/3)', y='0')\n",
-        "        .output(f'{output_file_prefix}_part2.mp4')\n",
+        "        .filter('crop', 'iw/3', 'ih', x='iw/3', y='0')\n",
+        "        .output('/content/output_part2.mp4')\n",
         "        .run(overwrite_output=True)\n",
         "    )\n",
         "    (\n",
         "        ffmpeg\n",
         "        .input(input_file)\n",
-        "        .filter('crop', 'iw/3', 'ih', x='(iw/3)*2', y='0')\n",
-        "        .output(f'{output_file_prefix}_part3.mp4')\n",
+        "        .filter('crop', 'iw/3', 'ih', x='iw*2/3', y='0')\n",
+        "        .output('/content/output_part3.mp4')\n",
         "        .run(overwrite_output=True)\n",
         "    )\n",
+        "    audio_output = 'audio_from_video.aac'\n",
+        "    ffmpeg.input(input_file).audio.output(audio_output, acodec='copy').run(overwrite_output=True)\n",
+        "    audio = ffmpeg.input(audio_output)\n",
+        "    video1 = ffmpeg.input('/content/output_part1.mp4')\n",
+        "    video2 = ffmpeg.input('/content/output_part2.mp4')\n",
+        "    video3 = ffmpeg.input('/content/output_part3.mp4')\n",
+        "    ffmpeg.concat(video1, audio, v=1, a=1).output('/content/output_part1_a.mp4').run(overwrite_output=True)\n",
+        "    ffmpeg.concat(video2, audio, v=1, a=1).output('/content/output_part2_a.mp4').run(overwrite_output=True)\n",
+        "    ffmpeg.concat(video3, audio, v=1, a=1).output('/content/output_part3_a.mp4').run(overwrite_output=True)\n",
         "\n",
-        "cut_video_into_three_equal_parts(output_file, '/content/output')\n",
+        "cut_video_into_three_equal_parts(output_file)\n",
         "\n",
         "from ipywidgets import Video\n",
         "Video.from_file(\"/content/output_part2.mp4\")"
