--- a/AniPortrait_vid2vid_flat_jupyter.ipynb
+++ b/AniPortrait_vid2vid_flat_jupyter.ipynb
@@ -283,12 +283,12 @@
         "    fps=src_fps if args.fps is None else args.fps,\n",
         ")\n",
         "\n",
-        "audio_output = '/content/audio_from_video.aac'\n",
+        "probe = ffmpeg.probe(save_path)\n",
+        "duration = float(probe['format']['duration'])\n",
         "output_file = \"/content/output.mp4\"\n",
-        "ffmpeg.input(source_video_path).output(audio_output, acodec='copy').run(overwrite_output=True)\n",
+        "audio_stream = ffmpeg.input(source_video_path).audio.filter('atrim', duration=duration)\n",
         "video_stream = ffmpeg.input(save_path)\n",
-        "audio_stream = ffmpeg.input(audio_output)\n",
-        "ffmpeg.output(video_stream.video, audio_stream.audio, output_file, vcodec='copy', acodec='aac').run(overwrite_output=True)\n",
+        "ffmpeg.output(video_stream, audio_stream, output_file).overwrite_output().run(overwrite_output=True)\n",
         "\n",
         "def cut_video_into_three_equal_parts(input_file):\n",
         "    (\n",
